theme file added

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -298,7 +298,7 @@
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
-
+<h1>Hello</h1>
           <!-- Google Tag Manager (noscript) -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXVSRWNT"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
